Refactor: Replace "Asset" terminology with "Resource"
- Renamed classes, methods, and variables to use "Resource" instead of "Asset".
- Updated documentation to reflect the terminology change.
- Modified test cases and relevant comments to align with the new naming.